fix bug with navbar on mobile

--- a/wp-content/themes/FoundationPress/assets/scss/custom/_navbar.scss
+++ b/wp-content/themes/FoundationPress/assets/scss/custom/_navbar.scss
@@ -1,11 +1,13 @@
 .top-bar {
-	padding: 2rem;
-	background-color:$white;
-
-	ul{
+	@include breakpoint(medium) {
+		padding: 2rem;
 		background-color:$white;
 
-	}
+		ul{
+			background-color:$white;
 
-	border-bottom:1px solid $dark-bg;
+		}
+
+		border-bottom:1px solid $dark-bg;
+	}
 }
